--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <script src="./dist/script.js"></script>
+  <script defer src="/dist/script.js"></script>
+
   <link rel="stylesheet" href="./dist/style.css">
   
   <title>My Dark Mode Prototype</title>
